kdelibs4 (3.0-0.alpha1-2) unstable; urgency=low
  
  * sync
  * move modules into /usr/lib/kde3 instead of /usr/lib/kde2

 -- Ivan E. Moore II <rkrusty@debian.org>  Thu, 18 Oct 2001 10:18:00 -0700

kdelibs4 (3.0-0.alpha1-1) unstable; urgency=low

  * New upstream version
  * Get rid of that damn epoch

 -- Ivan E. Moore II <rkrusty@debian.org>  Fri, 12 Oct 2001 10:18:00 -0700

kdelibs (4:2.2.1-10) unstable; urgency=low

  * Hopefully fix both the AA problem and the kicker crash problem
  * Clean up lintian overrides
  * Sync with upstream

 -- Ivan E. Moore II <rkrusty@debian.org>  Fri, 12 Oct 2001 10:18:00 -0700

kdelibs (4:2.2.1-9) unstable; urgency=low

  * Fix deps (Closes: #115064)

 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 08 Sep 2001 09:55:00 -0700

kdelibs (4:2.2.1-8) unstable; urgency=low

  * Remove build-depends for auto* since we are doing that locally to
    get around the automake 1.5 issues
  * Remove configure checks for automake/autoheader.  On some archs it seems
    to track this info down and attempt to run auto* which just hoses things
  * More upstream fixes
  * Update standards version

 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 08 Sep 2001 09:55:00 -0700

kdelibs (4:2.2.1-7) unstable; urgency=low

  * Not sure what happened but let's chmod 755 configure just to make
    sure it's got the proper perms before we execute it (Closes: #114552)
  * Various other upstream fixes

 -- Ivan E. Moore II <rkrusty@debian.org>  Fri, 05 Sep 2001 09:48:00 -0700

kdelibs (4:2.2.1-6) unstable; urgency=low

  * let this puppy build with automake 1.5
  * Various other upstream fixes

 -- Ivan E. Moore II <rkrusty@debian.org>  Tue, 02 Sep 2001 01:00:00 -0700

kdelibs (4:2.2.1-5) unstable; urgency=low

  * arts updates ... this should fix some of the arts related problems
  * crash fix for css
  * Various other upstream fixes
  * fix shlibs

 -- Ivan E. Moore II <rkrusty@debian.org>  Sun, 30 Sep 2001 01:00:00 -0700
