@@ -1,1 +1,1 @@
-usr/share/doc/kdelibs-dev/dh-make
+usr/share/doc/kdelibs4-dev/dh-make
