@@ -1,22 +1,22 @@
-usr/include/kde/*
-usr/share/doc/kdelibs-dev/dh-make/*
-usr/lib/libkscreensaver.so
-usr/lib/libkdeprint.so
-usr/lib/libkdeprint_management.so
-usr/lib/libkdefakes.so
-usr/lib/libDCOP.so
-usr/lib/libkdecore.so
-usr/lib/libkdeui.so
-usr/lib/libkdesu.so
-usr/lib/libkssl.so
-usr/lib/libkio.so
-usr/lib/libksycoca.so
-usr/lib/libkfile.so
-usr/lib/libkparts.so
-usr/lib/libkjs.so
-usr/lib/libktexteditor.so
-usr/lib/libkab.so
-usr/lib/libkjava.so
-usr/lib/libkhtml.so
-usr/lib/libkspell.so
-usr/lib/libkregexpeditor.so
+usr/include/kde3/*
+usr/share/doc/kdelibs4-dev/dh-make/*
+usr/lib/kde3/libkscreensaver.so
+usr/lib/kde3/libkdeprint.so
+usr/lib/kde3/libkdeprint_management.so
+usr/lib/kde3/libkdefakes.so
+usr/lib/kde3/libDCOP.so
+usr/lib/kde3/libkdecore.so
+usr/lib/kde3/libkdeui.so
+usr/lib/kde3/libkdesu.so
+usr/lib/kde3/libkssl.so
+usr/lib/kde3/libkio.so
+usr/lib/kde3/libksycoca.so
+usr/lib/kde3/libkfile.so
+usr/lib/kde3/libkparts.so
+usr/lib/kde3/libkjs.so
+usr/lib/kde3/libktexteditor.so
+usr/lib/kde3/libkab.so
+usr/lib/kde3/libkjava.so
+usr/lib/kde3/libkhtml.so
+usr/lib/kde3/libkspell.so
+usr/lib/kde3/libkregexpeditor.so
