@@ -1,0 +1,8 @@
+usr/bin/mcopidl
+usr/bin/artsd
+usr/bin/artsplay
+usr/bin/artscat
+usr/bin/artswrapper
+usr/bin/artsdsp
+usr/bin/artsshell
+usr/share/doc/kde/HTML/arts*
