@@ -1,23 +1,15 @@
-usr/lib/libmcop.so.*
-usr/lib/libmcop.la
-usr/lib/libmcop_mt.so.*
-usr/lib/libmcop_mt.la
-usr/lib/mcop/*
-usr/lib/libarts*.so.*
-usr/lib/libarts*.la
-usr/lib/libkmedia2_idl.so.*
-usr/lib/libkmedia2_idl.la
-usr/lib/libkmedia2.so.*
-usr/lib/libkmedia2.la
-usr/lib/libsoundserver_idl.so.*
-usr/lib/libsoundserver_idl.la
-usr/lib/libx11globalcomm.so.*
-usr/lib/libx11globalcomm.la
-usr/bin/mcopidl
-usr/bin/artsd
-usr/bin/artsplay
-usr/bin/artscat
-usr/bin/artswrapper
-usr/bin/artsdsp
-usr/bin/artsshell
-usr/share/doc/kde/HTML/arts*
+usr/lib/kde3/libmcop.so.*
+usr/lib/kde3/libmcop.la
+usr/lib/kde3/libmcop_mt.so.*
+usr/lib/kde3/libmcop_mt.la
+usr/lib/kde3/mcop/*
+usr/lib/kde3/libarts*.so.*
+usr/lib/kde3/libarts*.la
+usr/lib/kde3/libkmedia2_idl.so.*
+usr/lib/kde3/libkmedia2_idl.la
+usr/lib/kde3/libkmedia2.so.*
+usr/lib/kde3/libkmedia2.la
+usr/lib/kde3/libsoundserver_idl.so.*
+usr/lib/kde3/libsoundserver_idl.la
+usr/lib/kde3/libx11globalcomm.so.*
+usr/lib/kde3/libx11globalcomm.la
