@@ -1,15 +1,15 @@
 usr/bin/artsc-config
-usr/lib/libmcop.so
-usr/lib/libmcop_mt.so
-usr/lib/libartsflow_idl.so
-usr/lib/libartsflow.so
-usr/lib/libsoundserver_idl.so
-usr/lib/libartswavplayobject.so
-usr/lib/libx11globalcomm.so
-usr/lib/libartsc.so
-usr/lib/libartscbackend.so
-usr/lib/libartsdsp.so
-usr/lib/libkmedia2_idl.so
-usr/lib/libkmedia2.so
-usr/include/kde/arts/*
-usr/include/kde/artsc/*
+usr/lib/kde3/libmcop.so
+usr/lib/kde3/libmcop_mt.so
+usr/lib/kde3/libartsflow_idl.so
+usr/lib/kde3/libartsflow.so
+usr/lib/kde3/libsoundserver_idl.so
+usr/lib/kde3/libartswavplayobject.so
+usr/lib/kde3/libx11globalcomm.so
+usr/lib/kde3/libartsc.so
+usr/lib/kde3/libartscbackend.so
+usr/lib/kde3/libartsdsp.so
+usr/lib/kde3/libkmedia2_idl.so
+usr/lib/kde3/libkmedia2.so
+usr/include/kde3/arts/*
+usr/include/kde3/artsc/*
