@@ -1,0 +1,2 @@
+usr/bin/knotify
+usr/bin/artsmessage
