@@ -1,3 +1,3 @@
-usr/lib/libkmid.so
-usr/lib/libqtmcop.so
-usr/include/kde/libkmid/*
+usr/lib/kde3/libkmid.so
+usr/lib/kde3/libqtmcop.so
+usr/include/kde/kde3/libkmid/*
